# SeqScan

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  tags
ReferenceSRC/: Makefile  bitap.cpp  fasta.h  kmp.cpp  manachers.cpp  naivePalindrome.cpp  sfm_python.py
benchmark/: .gitignore  Makefile  collect_benchmark_data.sh  plot_benchmark.gp  pyRegexMatch.py
benchmark/data/: .gitignore
benchmark/pat_PCR/: pyRegex_na.pat
benchmark/pat_approx_003/: sfm.pat
benchmark/pat_approx_030/: pyRegex_na.pat  sfm.pat
benchmark/pat_approx_222/: sfm_na.pat
benchmark/pat_approx_300/: pyRegex_na.pat  seqscan_na.pat  sfm.pat
benchmark/pat_exact/: seqscan.pat
benchmark/pat_group/: pyRegex_aa.pat  seqscan_aa.pat  sfm_aa.pat
benchmark/pat_group_neg/: pyRegex_aa.pat  seqscan_aa.pat  sfm_aa.pat
benchmark/seqscan_vs_sfm/: .gitignore  Makefile  collect_benchmark_data.sh  plot_benchmark.gp  pyRegexMatch.py
benchmark/seqscan_vs_sfm/pat_PCR/: seqscan.pat  sfm.pat
benchmark/seqscan_vs_sfm/pat_approx_003/: pyRegex.pat  seqscan.pat
benchmark/seqscan_vs_sfm/pat_approx_030/: seqscan.pat
benchmark/seqscan_vs_sfm/pat_approx_222/: pyRegex.pat  seqscan.pat
benchmark/seqscan_vs_sfm/pat_snoRNA/: sfm.pat
parser/: .gitignore  .main.cpp.swp  .seq_par.y.swp  Makefile  Makefile_orig  del.sh  final_parser.cpp  final_parser.h  hej  input.txt  main.cpp  parse_tree_list.cpp  parse_tree_list.h  parse_tree_unit.cpp  parse_tree_unit.h  punit_list.cpp  punit_list.h  run.sh  sanity_check.cpp  seq_lex.l  seq_lex.ll  seq_lex_orig.h  seq_par.tab.cc  seq_par.tab.hh  seq_par.y  seq_par.yy  seqscan
parser-generator/: .gitignore  CMakeLists.txt  Makefile  README.md  interpreter.cc  interpreter.cpp  interpreter.h  main  main.cc  main.cpp  parse_tree_unit.cc  parser.cc  parser.cpp  parser.hh  parser.hpp  parser.y  ptnode.cc  ptnode.cpp  ptnode.h  scanner.cc  scanner.cpp  scanner.l
parser-generator/include/: interpreter.h  parse_tree_unit.h  ptnode.h
parser-generator/main.dSYM/Contents/Resources/DWARF/: main
parser-generator/src/: interpreter.cc  interpreter.h  main.cc  parse_tree_unit.cc  parse_tree_unit.h  parser.y  scanner.h  scanner.l
parser-tests/: run_tests.cc  test_parser.cc  test_scanner.cc
src/: .gitignore  CMakeLists.txt  IO.cc  IO.h  io.cc  io.h  main.cc  match.cc  match.h  matrix_io.cc  matrix_io.h  modifiers.cc  modifiers.h  opt_parse.cc  opt_parse.h  optparse.cc  optparse.h  pattern_io.cc  pattern_io.h  res_matcher.cc  res_matcher.h  res_template.cc  res_template.h  run_seqscan.cc  tnfa_final_state.cc
src/parser/: .gitignore  Parser.cc  Parser.h  README.md  input.txt  interpreter.cc  interpreter.h  lex.yy.c  lex.yy.cc  location.h  parse_tree_list.h  parse_tree_unit.cc  parse_tree_unit.cpp  parse_tree_unit.h  parser.cc  parser.h  parser.y  position.h  punit_list.cpp  punit_list.h  sanity_check.h  scanner.cc  scanner.l  seq_par.tab.cc  seq_par.tab.h  seq_par.tab.hh  seq_par.y  stack.h
src/pu/: backtrack_edits_unit.cc  backtrack_edits_unit.h  backtrack_indel_unit.cc  backtrack_indel_unit.h  backtrack_sequence_unit.cc  backtrack_sequence_unit.cpp  backtrack_sequence_unit.h  backtrack_unit.cc  backtrack_unit.h  composite_unit.cc  composite_unit.h  group_unit.cc  group_unit.h  kmp_unit.cc  kmp_unit.h  pattern_unit.cc  pattern_unit.h  range_unit.cc  range_unit.h  reference_unit.cc  reference_unit.h  repeat_unit.cc  repeat_unit.h  tnfa.cc  tnfa.h  tnfa_final_state.cc  tnfa_final_state.h  tnfa_levenshtein_state.h  tnfa_model.h  tnfa_model_512.cc  tnfa_model_512.h  tnfa_model_64.cc  tnfa_model_64.h  tnfa_sequence_unit.cc  tnfa_sequence_unit.h  tnfa_start_state.cc  tnfa_start_state.h  tnfa_state.cc  tnfa_state.h  tnfa_unit.cc  (+1 more)
src/pu/backtrackers/: backtrack_edits_unit.cc  backtrack_edits_unit.h  backtrack_indel_unit.cc  backtrack_indel_unit.h  backtrack_mid_unit.cc  backtrack_mid_unit.h  backtrack_unit.cc  backtrack_unit.h
src/pu/tnfa/: tnfa_final_state_512.cc  tnfa_final_state_512.h  tnfa_final_state_64.cc  tnfa_final_state_64.h  tnfa_final_state_edits.cc  tnfa_final_state_edits.h  tnfa_final_state_indel.cc  tnfa_final_state_indel.h  tnfa_model.cc  tnfa_model.h  tnfa_model_512.cc  tnfa_model_512.h  tnfa_model_64.cc  tnfa_model_64.h  tnfa_model_edits.cc  tnfa_model_edits.h  tnfa_model_indel.cc  tnfa_model_indel.h  tnfa_start_state.h  tnfa_start_state_512.cc  tnfa_start_state_512.h  tnfa_start_state_64.cc  tnfa_start_state_64.h  tnfa_start_state_edits.cc  tnfa_start_state_edits.h  tnfa_start_state_indel.cc  tnfa_start_state_indel.h  tnfa_state.cc  tnfa_state.h  tnfa_state_512.cc  tnfa_state_512.h  tnfa_state_64.cc  tnfa_state_64.h  tnfa_state_edits.cc  tnfa_state_edits.h  tnfa_state_indel.cc  tnfa_state_indel.h  tnfa_unit.cc  tnfa_unit.h
src/pu_factory/: pattern_unit_creator.cc  pattern_unit_creator.h  pattern_unit_factory.cc  pattern_unit_factory.h  pure_tnfa_factory.cc  pure_tnfa_factory.h  sanity_checker.cc  sanity_checker.h
src/tests/: run_tests.cc  test_backtrack_sequence_unit.cc  test_backtrack_unit.cc  test_composite_unit.cc  test_fuzzy_sequence.cc  test_template.cc  test_tnfa_unit.cc
tests/: test_backtrack_unit.cc  test_composite_unit.cc  test_fuzzy_sequence.cc  test_matrix_io.cc  test_opt_parse.cc  test_optparse.cc  test_pattern_io.cc  test_res_matcher.cc  test_res_template.cc  test_template.cc  test_tnfa_unit.cc
tests/parser/: test_pattern_parser.cc
tests/pu/: test_backtrack_unit.cc  test_composite_unit.cc  test_group_unit.cc  test_kmp_unit.cc  test_reference_unit.cc  test_repeat_unit.cc  test_tnfa_unit.cc
tests/pu/backtrackers/: test_backtrack_mid_unit.cc
tests/pu_factory/: test_pattern_unit_creator.cc  test_sanity_checker.cc
